# MilestoneX-Contracts

./: .env.example  .gitignore  ARCHITECTURE.md  ASSET_IMPLEMENTATION_CHECKLIST.md  ASSET_IMPLEMENTATION_SUMMARY.md  ASSET_INTEGRATION_GUIDE.md  ASSET_ISSUING_GUIDE.md  ASSET_QUICK_START.md  ASSET_REFERENCE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DELIVERY_SUMMARY.md  DONATION_MODAL_INTEGRATION.md  FEE_ESTIMATION.md  FEE_SUMMARY.md  Flow.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MAINNET_CONFIG_GUIDE.md  MAINTAINERS.md  Makefile  README.md  SECURITY.md  SECURITY_AND_RELIABILITY_IMPLEMENTATION.md  SIGNING_EXAMPLES.sh  SIGNING_FLOW.md  SIGNING_REQUEST_GUIDE.md  STELLAR_ADDRESS_VALIDATION_IMPLEMENTATION.md  STORAGE_OPTIMIZATION_GUIDE.md  STORAGE_OPTIMIZATION_QUICKREF.md  STORAGE_OPTIMIZATION_SUMMARY.md  deny.toml  deploy.sh  package-lock.json  rust-toolchain.toml  soroban.toml  wallet_connect.html
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
campaign/: Cargo.toml
campaign/src/: contract.rs  errors.rs  event.rs  get_all_milestones.rs  get_milestone.rs  lib.rs  multi_asset_release.rs  release_milestone.rs  storage.rs  types.rs  views.rs
campaign/src/test/: budget_invariant_tests.rs  claim_refund_tests.rs  concluded_ledger_tests.rs  diagnostics_tests.rs  get_campaign_status_tests.rs  integration_tests.rs  invariant_tests.rs  mod.rs  negative_path_tests.rs  refund_eligibility_tests.rs  release_milestone_tests.rs
campaign/test_snapshots/: wire_code_fixture.txt
campaign/test_snapshots/test/negative_path_tests/: test_cancel_then_refund_eligible.1.json  test_claim_refund_fails_already_claimed.1.json  test_claim_refund_fails_no_donor_record.1.json  test_donate_fails_campaign_ended.1.json  test_donate_fails_on_donation_count_overflow.1.json  test_end_campaign_fails_already_ended.1.json  test_end_then_refund_eligible.1.json  test_extend_deadline_fails_cancelled.1.json  test_is_refund_eligible_fails_already_claimed.1.json  test_is_refund_eligible_fails_ended_with_released_milestones.1.json  test_is_refund_eligible_fails_no_donor_record.1.json
common/: Cargo.toml
common/src/: lib.rs
crates/contracts/core/: Cargo.toml
crates/contracts/core/src/: campaign.rs  donation.rs  donation_optimized.rs  events.rs  lib.rs  rbac.rs  refunds.rs  storage_optimized.rs  storage_tests.rs
crates/contracts/core/src/account_monitor/src/: events.rs  lib.rs  storage.rs  thresholds.rs
crates/contracts/core/src/analytics/: events.rs  metrics.rs
crates/contracts/core/src/assets/: config.rs  metadata.rs  mod.rs  price_feeds.rs  resolver.rs  storage.rs  validation.rs
crates/contracts/core/src/validation/: address.rs  errors.rs
crates/contracts/core/test_snapshots/tests/: test_get_greeting.1.json  test_hello.1.json  test_init_and_ping.1.json
crates/tools/: Cargo.toml
crates/tools/src/: asset_issuing.rs  blockchain_verification.rs  campaign_totals.rs  certificate_pdf.rs  config.rs  donation_tx_builder.rs  encrypted_vault.rs  environment_config.rs  failed_match_handler.rs  horizon_client.rs  horizon_error.rs  horizon_rate_limit.rs  horizon_retry.rs  key_manager.rs  keypair_manager.rs  lib.rs  main.rs  payment_fetcher.rs  payment_matcher.rs  poll_config.rs  polling_scheduler.rs  response_handler.rs  retry.rs  secure_vault.rs  security_tests.rs  signing_request.rs  soroban_tx_builder.rs  streaming_processor.rs  wallet_signing.rs  withdrawal_audit.rs  withdrawal_limits.rs  worker_logger.rs
crates/tools/src/fee/: cache.rs  calculator.rs  currency.rs  error.rs  horizon_fetcher.rs  mod.rs  service.rs  surge_pricing.rs
crates/tools/src/horizon_client/: cache.rs  client.rs  health.rs  mod.rs
crates/tools/src/transaction_submission/: error.rs  logging.rs  mod.rs  service.rs  types.rs
crates/tools/tests/: account_management_tests.rs  batch_operations_tests.rs  contract_interaction_tests.rs  fee_integration_tests.rs  integration_test.rs  integration_tests.rs  transaction_history_tests.rs  validation_tests.rs
docs/: audit-log.schema.json  deployment.md  events.md  observability.md
examples/: asset_management.rs  horizon_client_examples.rs
scripts/: deploy.sh
token-bridge/: Cargo.toml
token-bridge/src/: lib.rs
wallet-client/: package-lock.json  package.json  webpack.config.js
wallet-client/src/: index.js  template.html
