[workspace]
resolver = "2"
members = [
    "campaign",
    "common",
    "crates/contracts/core",
    "crates/tools",
    "token-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[workspace.dependencies]
soroban-sdk = { version = "26.0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15"
common = { package = "milestonex-common", path = "common" }
