[workspace]
resolver = "2"
members = [
    "campaign",
    "common",
    "crates/contracts/core",
    "crates/tools",
    "token-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[workspace.dependencies]
soroban-sdk = { version = "26.0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15"
common = { package = "milestonex-common", path = "common" }
# Workspace-wide exact pin for ed25519-dalek. soroban-env-host 26.1.3
# testutils (used by soroban-sdk's testutils feature) calls
# SigningKey::generate(chacha) with a rand 0.8 ChaCha20Rng. In
# ed25519-dalek 2.x this takes the rand_core 0.6 CryptoRng surface
# (satisfied by ChaCha20Rng). In 3.0 the trait bound changed to
# rand_core 0.9 CryptoRng, which ChaCha20Rng does not implement.
# Pinning workspace-wide to 2.2.0 forces a single version across
# campaign's testutils and the milestonex-tools ^2.2 range. NOTE:
# a workspace-deps pin only constrains direct uses in workspace
# members; it does NOT override the version requirement of the
# transitive soroban-env-host dep, which is the actual root cause
# of the test-job compile failure. A full fix requires either
# bumping soroban-sdk to a version whose soroban-env-host is
# compatible with ed25519-dalek 3.x, or vendoring. Tracked
# separately.
ed25519-dalek = "=2.2.0"
