[package]
name = "milestonex-campaign"
version = "0.1.0"
edition = "2021"
description = "MilestoneX campaign smart contract — milestones, donations, refunds, and lifecycle"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
common = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }
# Inherit the workspace-wide ed25519-dalek = 2.2.0 exact pin (see
# /Cargo.toml [workspace.dependencies] for the rationale).
