[package]
name = "milestonex-token-bridge"
version = "0.1.0"
edition = "2021"
description = "MilestoneX cross-chain token bridge contract"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
common = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }
