[package]
name = "stellaraid-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "stellaraid-cli"
path = "src/main.rs"

[dependencies]
soroban-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
toml = "0.8"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
zeroize = "1.6"
chrono = { version = "0.4", features = ["serde"] }
