[package]
name = "milestonex-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "MilestoneX CLI tools — key management, signing, asset issuing, and payment processing"

[[bin]]
name = "milestonex-cli"
path = "src/main.rs"

[dependencies]
soroban-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["rt", "macros", "time"] }
anyhow = { workspace = true }
dotenv = { workspace = true }
toml = "0.8"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
ed25519-dalek = { workspace = true }
zeroize = "1.6"
chrono = { version = "0.4", features = ["serde"] }
