[package]
name = "milestonex-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Legacy MilestoneX campaign reference contract; canonical implementation lives in milestonex-campaign"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
